GPC/tests/examples/fail/wrongTypeDecl4.gpc


double GPRM::Test::wrongTypeDecl4() {

    int x = 5;
    double y = 6.0;
    return x <= y;
}
